--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -10,16 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.binaryfork.onmap.widget.ImageTextView
+        <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="#fff"
             android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_launcher"
-            android:drawableRight="@drawable/abc_ab_share_pack_holo_dark"
-            android:paddingLeft="16dp"
+            android:paddingLeft="48dp"
             android:textAppearance="@android:style/TextAppearance.Medium"/>
+
+        <ImageView
+            android:id="@+id/user_photo"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="8dp"
+            android:adjustViewBounds="true"/>
 
         <TextView
             android:id="@+id/comments"
