--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -11,22 +11,6 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="#fff"
-            android:gravity="center_vertical"
-            android:paddingLeft="48dp"
-            android:textAppearance="@android:style/TextAppearance.Medium"/>
-
-        <ImageView
-            android:id="@+id/user_photo"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:padding="8dp"
-            android:adjustViewBounds="true"/>
-
-        <TextView
             android:id="@+id/comments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,8 +19,24 @@
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:background="#fff"
             android:orientation="vertical"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="@dimen/username_bar_size"
             android:padding="16dp" />
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/username_bar_size"
+            android:background="#fff"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/username_bar_size"
+            android:textAppearance="@android:style/TextAppearance.Medium"/>
+
+        <ImageView
+            android:id="@+id/user_photo"
+            android:layout_width="@dimen/username_bar_size"
+            android:layout_height="@dimen/username_bar_size"
+            android:padding="8dp"
+            android:adjustViewBounds="true"/>
 
         <com.binaryfork.onmap.widget.SquareImageView
             android:id="@+id/expanded_image"
