--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="map_marker_photo">56dp</dimen>
     <dimen name="map_circle_stroke">2dp</dimen>
+    <dimen name="username_bar_size">56dp</dimen>
 </resources>
