--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,5 +21,12 @@
         android:gravity="center"
         android:textAppearance="@android:style/TextAppearance.Medium"/>
 
+    <SeekBar
+        android:id="@+id/seek_bar_radius"
+        android:max="100"
+        android:progress="50"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <include layout="@layout/layout_photo"/>
 </RelativeLayout>
