--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.binaryfork.onmap.widget.SquareImageView
+    <com.binaryfork.onmap.widget.ExpandingImage
         android:id="@+id/expanded_image"
         android:layout_alignParentTop="true"
         android:layout_height="match_parent"
