--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -14,11 +14,23 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="match_parent"
+        android:layout_width="128dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:background="#fff"
+        android:background="#9fff"
         android:gravity="center"
+        android:textAppearance="@android:style/TextAppearance.Medium"/>
+
+    <TextView
+        android:id="@+id/mediaSwitch"
+        android:layout_marginLeft="8dp"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
+        android:layout_toRightOf="@+id/date"
+        android:layout_alignParentBottom="true"
+        android:background="#9fff"
+        android:gravity="center"
+        android:text="Video"
         android:textAppearance="@android:style/TextAppearance.Medium"/>
 
     <SeekBar
