--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -42,6 +42,13 @@
             android:clickable="true"
             android:adjustViewBounds="true"/>
 
+        <com.binaryfork.onmap.widget.SquareVideoView
+            android:id="@+id/videoView"
+            android:visibility="gone"
+            android:layout_below="@+id/user_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <com.binaryfork.onmap.widget.SquareImageView
             android:id="@+id/expanded_image"
             android:layout_width="match_parent"
