Moved all markers logic into MarkersViewImplementation. Added date picker.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -22,15 +22,15 @@
         android:textAppearance="@android:style/TextAppearance.Medium"/>
 
     <TextView
-        android:id="@+id/mediaSwitch"
+        android:id="@+id/calendar"
         android:layout_marginLeft="8dp"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_toRightOf="@+id/date"
         android:layout_alignParentBottom="true"
         android:background="#9fff"
         android:gravity="center"
-        android:text="Video"
+        android:text="C"
         android:textAppearance="@android:style/TextAppearance.Medium"/>
 
     <SeekBar
