--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -54,6 +54,7 @@
             android:id="@+id/expanded_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#eee"
             android:adjustViewBounds="true"
             android:visibility="invisible" />
     </RelativeLayout>
