--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="map_circle_stroke">2dp</dimen>
     <dimen name="username_bar_size">56dp</dimen>
     <dimen name="video_icon_padding">16dp</dimen>
+    <dimen name="grid_spacing">16dp</dimen>
 </resources>
