--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!-- The main content view -->
-    <include layout="@layout/layout_map" />
+    <include layout="@layout/map_layout" />
     <!-- The navigation drawer -->
     <ListView
         android:id="@+id/left_drawer"
