--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="accent">#03A9F4</color>
+    <color name="accent_transparent">#6603A9F4</color>
 
 </resources>
