--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -1,16 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MapsActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.binaryfork.onmap.activities.MapMediaFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MapsActivity" />
+        android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/date"
@@ -26,7 +24,7 @@
         android:max="100"
         android:progress="50"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <com.binaryfork.onmap.ui.LocationSearchBox
         android:layout_width="wrap_content"
@@ -39,7 +37,7 @@
         android:layout_height="match_parent"
         android:visibility="gone"
         android:background="#9000"
-        android:id="@+id/gridView" />
+        android:id="@+id/gridView"/>
 
     <include layout="@layout/photo_layout"/>
 </RelativeLayout>
