--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -12,19 +12,22 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="128dp"
+        android:layout_width="72dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:background="#9fff"
+        android:background="@color/accent_transparent"
         android:gravity="center"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
+        android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
 
-    <SeekBar
-        android:id="@+id/seek_bar_radius"
-        android:max="100"
-        android:progress="50"
+    <com.binaryfork.onmap.ui.RangeSeekBar
+        android:id="@+id/rangeSeekBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="72dp"
+        android:layout_marginRight="72dp"
+        android:layout_alignParentBottom="true"
+        android:max="3000"
+        android:progress="1000"/>
 
     <com.binaryfork.onmap.ui.LocationSearchBox
         android:layout_width="wrap_content"
