Replaced Media with SearchItem for search adapter. Added search history. Added weak referenced activity to grab drawables from theme attributes.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="bgMainColor" format="reference" />
-    <attr name="photoPlaceholder" format="reference" />
+    <attr name="iconPhotoPlaceholder" format="reference" />
+    <attr name="iconHistory" format="reference" />
+    <attr name="iconPlaceMarker" format="reference" />
 </resources>
