--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,9 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="bgMainColor">@android:color/white</item>
-        <item name="photoPlaceholder">@drawable/ic_launcher</item>
+        <item name="iconPhotoPlaceholder">@drawable/ic_launcher</item>
+        <item name="iconHistory">@android:drawable/ic_menu_recent_history</item>
+        <item name="iconPlaceMarker">@android:drawable/ic_dialog_map</item>
     </style>
 
 </resources>
