--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.binaryfork.onmap.widget.SquareImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<com.binaryfork.onmap.widget.SquareImageView
+    android:id="@+id/imageView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:adjustViewBounds="true"
-    android:id="@+id/imageView" />
+    android:scaleType="centerCrop"/>
