--- a/app/src/main/res/layout/photo_layout.xml
+++ b/app/src/main/res/layout/photo_layout.xml
@@ -45,7 +45,7 @@
         <com.binaryfork.onmap.widget.SquareVideoView
             android:id="@+id/videoView"
             android:visibility="gone"
-            android:layout_below="@+id/user_photo"
+            android:layout_below="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
