--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/container"
                 android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:id="@+id/date"
         android:layout_width="72dp"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:background="@color/accent"
         android:gravity="center"
         android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="72dp"
         android:layout_marginRight="72dp"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:max="5000"
         android:progress="1000"/>
 
@@ -39,8 +39,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:background="#9000"
+        android:clipChildren="false"
+        android:padding="8dp"
+        android:background="#c000"
         android:id="@+id/gridView"/>
 
-    <include layout="@layout/photo_layout"/>
-</RelativeLayout>
+    <View android:id="@+id/backgroundView"
+          android:visibility="gone"
+          android:background="#fff"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
+
+    <include layout="@layout/media_view"/>
+</io.codetail.widget.RevealFrameLayout>
