--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="accent">#03A9F4</color>
     <color name="accent_transparent">#6603A9F4</color>
+    <item name="separator" type="color">#eee</item>
 
 </resources>
