--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.binaryfork.onmap.components.widget.SquareImageView
-    android:id="@+id/imageView"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    android:focusable="true"
-    android:clickable="true"
-    android:adjustViewBounds="true"
-    android:scaleType="centerCrop"/>
+    android:layout_height="match_parent">
+
+    <com.binaryfork.onmap.components.widget.SquareImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="centerCrop"/>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+</FrameLayout>
