--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="search_item_size">56dp</dimen>
     <dimen name="map_marker_photo">56dp</dimen>
     <dimen name="map_circle_stroke">2dp</dimen>
     <dimen name="username_bar_size">56dp</dimen>
