--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -31,6 +31,32 @@
         android:progress="1000"/>
 
     <ImageView
+        android:id="@+id/zoomIn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:clickable="true"
+        android:src="@drawable/plus"
+        android:padding="12dp"
+        android:scaleType="centerInside"
+        android:background="@drawable/button_circle"
+        android:layout_gravity="center_vertical|right"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="24dp"/>
+
+    <ImageView
+        android:id="@+id/zoomOut"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:clickable="true"
+        android:padding="12dp"
+        android:scaleType="centerInside"
+        android:background="@drawable/button_circle"
+        android:layout_gravity="center_vertical|right"
+        android:src="@drawable/minus"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"/>
+
+    <ImageView
         android:visibility="gone"
         android:id="@+id/fab"
         android:scaleType="centerInside"
