--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,6 @@
     <item name="flickr" type="color">#FF0084</item>
     <item name="instagram" type="color">#3f729b</item>
     <item name="twitter" type="color">#55acee</item>
-    <item name="foursquare" type="color">#0732a2</item>
+    <item name="foursquare" type="color">#00B551</item>
 
 </resources>
