--- a/app/src/main/res/layout/media_view.xml
+++ b/app/src/main/res/layout/media_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:id="@+id/info_layout"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:visibility="visible">
+<ScrollView
+    android:id="@+id/info_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:visibility="invisible">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,32 +13,79 @@
 
         <LinearLayout
             android:id="@+id/buttons"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_below="@+id/expanded_image"
             android:layout_marginTop="@dimen/username_bar_size"
-            android:gravity="center"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:background="@drawable/bottom_line"
-            android:layout_width="match_parent"
-            android:layout_height="56dp">
+            android:gravity="center">
+
             <TextView
                 android:id="@+id/navigate"
-                android:drawableTop="@drawable/ic_place_black_48dp"
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_white"
-                android:drawablePadding="2dp"
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/ic_place_black_48dp"
+                android:textAppearance="@android:style/TextAppearance.Small"
                 android:padding="8dp"
-                android:text="Show on map"
-                android:textColor="#000"/>
+                android:text="Show on map"/>
+
             <TextView
                 android:id="@+id/googlemaps"
-                android:drawableTop="@drawable/googlemaps"
-                android:padding="8dp"
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_white"
-                android:drawablePadding="2dp"
-                android:text="Google Maps"
-                android:textColor="#000"/>
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/googlemaps"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:padding="8dp"
+                android:text="Google Maps"/>
+            <TextView
+                android:id="@+id/instagram"
+                android:visibility="gone"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_white"
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/instagram_icon"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:padding="8dp"
+                android:text="Instagram"/>
+            <TextView
+                android:id="@+id/flickr"
+                android:visibility="gone"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_white"
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/flickr"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:padding="8dp"
+                android:text="flickr"/>
+            <TextView
+                android:id="@+id/foursquare"
+                android:visibility="gone"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_white"
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/foursquare"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:padding="8dp"
+                android:text="Foursquare"/>
         </LinearLayout>
 
         <TextView
@@ -49,32 +97,13 @@
             android:lineSpacingExtra="3dp"
             android:orientation="vertical"
             android:padding="16dp"
-            android:textColor="#000"
-            android:textAppearance="@android:style/TextAppearance.Small"/>
-
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/username_bar_size"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/username_bar_size"
-            android:paddingRight="8dp"
-            android:textAppearance="@android:style/TextAppearance.Medium"/>
-
-        <ImageView
-            android:id="@+id/user_photo"
-            android:layout_width="@dimen/username_bar_size"
-            android:layout_height="@dimen/username_bar_size"
-            android:adjustViewBounds="true"
-            android:clickable="true"
-            android:padding="8dp"/>
+            android:textAppearance="@android:style/TextAppearance.Small"
+            android:textColor="#000"/>
 
         <com.binaryfork.onmap.components.widget.SquareVideoView
             android:id="@+id/videoView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/username"
             android:visibility="gone"/>
 
         <com.binaryfork.onmap.components.widget.SquareImageView
