--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent">#03A9F4</color>
+    <color name="accent">#00B551</color>
+    <color name="accentDark">#009543</color>
     <color name="accent_transparent">#6603A9F4</color>
     <item name="separator" type="color">#eee</item>
 
