--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="menu_labels_style">
+        <item name="android:padding">16dp</item>
+        <item name="android:background">@drawable/search_bg</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+    <style name="borderwidth">
+        <item name="borderWidth">0dp</item>
+    </style>
 </resources>
